# kapibara

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  README.md  install_requirements.py  kapibara.yml  server.py  setup.cfg  setup.py
.github/workflows/: main.yml
app/kapibara/: __constants__.py  __init__.py  api.py
app/kapibara/shared/: __init__.py  useful.py
test/: test_api.py  test_shared_useful.py
