[metadata]
name = kapibara

# PEP0440 compatible formatted version, see:
# https://www.python.org/dev/peps/pep-0440/
#
# release markers:
#   X.Y
#   X.Y.Z   # For bugfix releases
#
# pre-release markers:
#   X.YaN   # Alpha release
#   X.YbN   # Beta release
#   X.YrcN  # Release Candidate
#   X.Y     # Final release
version = 1.0.0

author = Simone Conti
author_email = s.conti@itnok.com
description = Microservice written in Python.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/itnok/kapibara
project_urls =
    Bug Tracker = https://github.com/itnok/kapibara/issues
    CI Pipelines = https://github.com/itnok/kapibara/actions

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = app
packages = find:
python_requires = >=3.6
install_requires =
    colorlog
    fastapi==0.70.0
    python-dotenv
    PyYAML
    requests
    schema
    starlette==0.16.0
    uvicorn[standard]>=0.15.0

zip_safe = False

[options.packages.find]
where = app

[pycodestyle]
max_line_length = 120
statistics = True
exclude = data

[pylint.FORMAT]
max-line-length = 120
